--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "es6-promise": "^4.2.8",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
+    "sortablejs": "^1.14.0",
     "vue": "^2.5.2",
     "vue-cropper": "^0.5.6",
     "vue-router": "^3.0.1",
