更改端口和id

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "news_sys",
+  "name": "home_sys",
   "version": "1.0.0",
   "description": "新闻应用",
   "author": "904678748@qq.com <904678748@qq.com>",
