--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "sortablejs": "^1.14.0",
+    "tinymce": "^6.1.0",
     "vue": "^2.5.2",
     "vue-cropper": "^0.5.6",
     "vue-router": "^3.0.1",
